--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
 
+    <header class="header">
+        <a href="#home" class="logo">Alvaro <span>Marenco</span></a>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#education">Education</a>
+            <a href="#services">Services</a>
+            <a href="#sample-projects">Sample Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
     <script src="./script.js"></script>
 </body>
 </html>
