Services section ready

--- a/index.html
+++ b/index.html
@@ -94,6 +94,40 @@
         
     </section>
 
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+
+        <div class="services-container">
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>UI Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Frontend Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Backend Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>QA / Testing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="./script.js"></script>
 </body>
 </html>
