--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="#sample-projects">Sample Projects</a>
+            <a href="#project-samples">Projects Samples</a>
             <a href="#contact">Contact</a>
         </nav>
 
@@ -127,6 +127,112 @@
             </div>
         </div>
     </section>
+
+    <section class="project-samples" id="project-samples">
+
+        <div class="projects-box">
+            <h2 class="heading">Projects Samples</h2>
+
+            <div class="wrapper">
+                <div class="project-item">
+                    <img src="./assets/Project1.JPG" alt="project image">
+                    <h2>Project 1</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+
+                </div>
+
+                <div class="project-item">
+                    <img src="./assets/Project2.JPG" alt="project image">
+                    <h2>Project 2</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+
+                </div>
+
+                <div class="project-item">
+                    <img src="./assets/Project1.JPG" alt="project image">
+                    <h2>Project 3</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="contact" id="contact">
+
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+            </div>
+
+            <div class="input-group-2">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+        </form>
+
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#"><i class='bx bxl-telegram'></i></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">Home</a>
+            </li>
+
+            <li>
+                <a href="#services">Services</a>
+            </li>
+
+            <li>
+                <a href="#project-samples">Projects Samples</a>
+            </li>
+
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            © Alvaro Marenco | All Rights Reserved
+        </p>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
