Responsive design ready

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="projects-box">
             <h2 class="heading">Projects Samples</h2>
 
-            <div class="wrapper">
+            <div class="wrapper" id="wrapper">
                 <div class="project-item">
                     <img src="./assets/Project1.JPG" alt="project image">
                     <h2>Project 1</h2>
