Updating info on services and projects

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Backend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                    <p>Focused in the the process of building and managing the server-side software that powers a website or web application.</p>
                 </div>
             </div>
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>QA / Testing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam dolore earum, ex, corporis aliquam fugiat perspiciatis atque quisquam expedita neque deleniti odio molestiae sint?</p>
+                    <p>A process that ensures software meets quality standards before it's released to the public. Met by identifying bugs, ensuring compliance, improving user experience and testing security.</p>
                 </div>
             </div>
         </div>
@@ -143,10 +143,10 @@
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
                         <i class='bx bxl-javascript' id="tech"></i>
-                        <i class='bx bxl-tailwind-css' id="tech"></i>
-                        <i class='bx bxl-react' id="tech"></i>
+                        <!-- <i class='bx bxl-tailwind-css' id="tech"></i> -->
+                        <!-- <i class='bx bxl-react' id="tech"></i> -->
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+                    <p>A single page application (SPA) to browse movies by genre or directly by title. Using an API by The Movie Database, data is obtained and displayed as shown.  </p>
 
                 </div>
 
@@ -161,21 +161,22 @@
                         <!-- <i class='bx bxl-tailwind-css' id="tech"></i> -->
                         <i class='bx bxl-react' id="tech"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+                    <p>A weather app to get current weather info by location. Built using ReactJS and an API from Open Weather Map, by entering a city name, info like current temperature, humidity and wind speed are shown, as well as an icon that represents current weather conditions.</p>
 
                 </div>
 
                 <div class="project-item">
-                    <img src="./assets/Project1.JPG" alt="project image">
-                    <h2>Project 3</h2>
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/3D-Slider.mp4" autoplay loop></video>
+                    <h2>3D-Slider</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
-                        <i class='bx bxl-javascript' id="tech"></i>
+                        <!-- <i class='bx bxl-javascript' id="tech"></i>
                         <i class='bx bxl-tailwind-css' id="tech"></i>
-                        <i class='bx bxl-react' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i> -->
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa fugiat, sint ducimus obcaecati dolorum quas modi commodi incidunt sapiente, provident veniam. Totam nostrum officia molestias pariatur voluptate harum qui, culpa eius quidem in ea neque sint mollitia consequuntur? Maiores excepturi iste tempora hic minus explicabo et, deleniti a? Doloremque, ea.</p>
+                    <p>A simple yet visually captivating 3D slider, can be used in several scenarios to display cards, images, etc.</p>
 
                 </div>
             </div>
