Info updated / Portfolio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="#project-samples">Projects Samples</a>
+            <a href="#project-samples">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
 
@@ -132,7 +132,7 @@
     <section class="project-samples" id="project-samples">
 
         <div class="projects-box">
-            <h2 class="heading">Projects Samples</h2>
+            <h2 class="heading">Portfolio</h2>
 
             <div class="wrapper" id="wrapper">
                 <div class="project-item">
@@ -226,7 +226,7 @@
             </li>
 
             <li>
-                <a href="#project-samples">Projects Samples</a>
+                <a href="#project-samples">Portfolio</a>
             </li>
 
             <li>
