adding a new project item

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="wrapper" id="wrapper">
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
-                     <video src="./assets/MoviesApp.mp4" autoplay loop></video>
+                     <video src="./assets/MoviesApp.mp4" controls loop></video>
                     <h2>Movies App</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
@@ -152,7 +152,7 @@
 
                 <div class="project-item">
                     <!-- <img src="./assets/Project2.JPG" alt="project image"> -->
-                    <video src="./assets/Screen Recording - Jan 17, 2025-VEED.mp4" autoplay loop></video>
+                    <video src="./assets/Screen Recording - Jan 17, 2025-VEED.mp4" controls loop></video>
                     <h2>Weather App</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
@@ -167,7 +167,7 @@
 
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
-                     <video src="./assets/3D-Slider.mp4" autoplay loop></video>
+                     <video src="./assets/3D-Slider.mp4" controls loop></video>
                     <h2>3D-Slider</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
@@ -177,6 +177,21 @@
                         <i class='bx bxl-react' id="tech"></i> -->
                     </div>
                     <p>A simple yet visually captivating 3D slider, can be used in several scenarios to display cards, images, etc.</p>
+
+                </div>
+
+                <div class="project-item">
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/Leaves-banner.mp4" controls loop></video>
+                    <h2>3D-Slider</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <!-- <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i> -->
+                    </div>
+                    <p>A responsive banner/landing page to a ficticious business, such as a lounge, restaurant or spa.</p>
 
                 </div>
             </div>
