--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
                     <p>A responsive banner/landing page to a ficticious business, such as a lounge, restaurant or spa.</p>
 
                 </div>
+
+                <div class="project-item">
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/animated-accordion.mp4" controls loop></video>
+                    <h2>3D-Slider</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <!-- <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i> -->
+                    </div>
+                    <p>A responsive and animated accordion card display, suitable for many web layouts.</p>
+
+                </div>
             </div>
         </div>
 
