--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
-                        <!-- <i class='bx bxl-javascript' id="tech"></i>
-                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <!-- <i class='bx bxl-tailwind-css' id="tech"></i>
                         <i class='bx bxl-react' id="tech"></i> -->
                     </div>
                     <p>A responsive and animated accordion card display, suitable for many web layouts.</p>
