projects names updated

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
                      <video src="./assets/Leaves-banner.mp4" controls loop></video>
-                    <h2>3D-Slider</h2>
+                    <h2>Responsive Banner / Landing Page</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
@@ -198,7 +198,7 @@
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
                      <video src="./assets/animated-accordion.mp4" controls loop></video>
-                    <h2>3D-Slider</h2>
+                    <h2>Animated Accordion</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
