Updating profile pic

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <div class="home-img">
             <!-- <img src="./assets/ProfilePic.jpg" alt="profile pic"> -->
             <!-- <img src="./assets/Profile-img.jpg" alt="profile pic"> -->
-             <img src="./assets/file.png" alt="profile pic">
+             <!-- <img src="./assets/file.png" alt="profile pic"> -->
+             <img src="./assets/42e094ba-f4bf-4509-bb64-9936870ceeac.png" alt="profile pic">
         </div>
 
     </section>
