Updating social links

--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/alvaro-marenco-24b008a9/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/Marenco81" target="_blank"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-            <a href="#"><i class='bx bxl-telegram'></i></a>
+            <a href="https://t.me/AlvaroMarenco" target="_blank"><i class='bx bxl-telegram'></i></a>
         </div>
 
         <ul class="list">
