Updating social links in Home Section

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <p>I am a professional with a background in Civil Engineering . After several years along that path, I decided to pursue a career in a tech-related field , as I have always been passionate about technology. Since January 2024 , I have been learning several technologies and programming languages to become a Frontend Developer, and most recently , I have been learning about backend development as well, looking forward to one day becoming a Full Stack Web Developer. My goal is personal and professional growth , as well as providing for my family.</p>
 
             <div class="social-icons">
-                <a href="https://cr.linkedin.com/in/alvaro-marenco-24b008a9"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/Marenco81"><i class='bx bxl-github'></i></a>
+                <a href="https://cr.linkedin.com/in/alvaro-marenco-24b008a9" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Marenco81" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="https://web.telegram.org/"><i class='bx bxl-telegram'></i></a>
+                <a href="https://t.me/AlvaroMarenco" target="_blank"><i class='bx bxl-telegram'></i></a>
             </div>
     
             <div class="btn-group">
