Updating profile pic

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <!-- <img src="./assets/ProfilePic.jpg" alt="profile pic"> -->
             <!-- <img src="./assets/Profile-img.jpg" alt="profile pic"> -->
              <!-- <img src="./assets/file.png" alt="profile pic"> -->
-             <img src="./assets/42e094ba-f4bf-4509-bb64-9936870ceeac.png" alt="profile pic">
+             <!-- <img src="./assets/42e094ba-f4bf-4509-bb64-9936870ceeac.png" alt="profile pic"> -->
+             <img src="./assets/Retro Futuristic Neon Portrait.png" alt="profile pic">
         </div>
 
     </section>
