New projects added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
             <div class="wrapper" id="wrapper">
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/React landing page.mp4" controls loop></video>
+                    <h2>React Landing Page</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i>
+                    </div>
+                    <p>A landing page for a Construction Company, using React and Tailwind CSS. Provided with a contact form for potential customers. Fully responsive for diferent devices and with light and dark theme.  </p>
+
+                </div>
+
+                <div class="project-item">
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/Digital clock.mp4" controls loop></video>
+                    <h2>Digital Clock Display</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <!-- <i class='bx bxl-tailwind-css' id="tech"></i> -->
+                        <!-- <i class='bx bxl-react' id="tech"></i> -->
+                    </div>
+                    <p>A digital clock display intended to be used as a desktop or mobile time display while working. Also easily escalable to incorporate aditional features. First version of an ongoing project. </p>
+
+                </div>
+                
+                <div class="project-item">
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
                      <video src="./assets/MoviesApp.mp4" controls loop></video>
                     <h2>Movies App</h2>
                     <div class="tech">
