--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              <!-- <img src="./assets/file.png" alt="profile pic"> -->
              <!-- <img src="./assets/42e094ba-f4bf-4509-bb64-9936870ceeac.png" alt="profile pic"> -->
              <!-- <img src="./assets/Retro Futuristic Neon Portrait.png" alt="profile pic"> -->
-              <img src="/assets/ProfilePic.jpeg" alt="Profile pic">
+              <img src="./assets/ProfilePic.jpeg" alt="Profile pic">
         </div>
 
     </section>
