Adding new proyect

--- a/index.html
+++ b/index.html
@@ -215,16 +215,16 @@
 
                 <div class="project-item">
                     <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
-                     <video src="./assets/3D-Slider.mp4" controls loop></video>
-                    <h2>3D-Slider</h2>
+                     <video src="./docs/assets/Alvaro Marenco_s Video - Oct 29, 2025-VEED (1).mp4" controls loop></video>
+                    <h2>Slider effects</h2>
                     <div class="tech">
                         <i class='bx bxl-html5' id="tech"></i>
                         <i class='bx bxl-css3' id="tech"></i>
-                        <!-- <i class='bx bxl-javascript' id="tech"></i>
-                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-javascript' id="tech"></i>
+                        <!-- <i class='bx bxl-tailwind-css' id="tech"></i>
                         <i class='bx bxl-react' id="tech"></i> -->
                     </div>
-                    <p>A simple yet visually captivating 3D slider, can be used in several scenarios to display cards, images, etc.</p>
+                    <p>An animated slider with various effects to display any type of product. Fully responsive accross most used devices.</p>
 
                 </div>
 
@@ -255,6 +255,21 @@
                         <i class='bx bxl-react' id="tech"></i> -->
                     </div>
                     <p>A responsive and animated accordion card display, suitable for many web layouts.</p>
+
+                </div>
+
+                <div class="project-item">
+                    <!-- <img src="./assets/Project1.JPG" alt="project image"> -->
+                     <video src="./assets/3D-Slider.mp4" controls loop></video>
+                    <h2>3D-Slider</h2>
+                    <div class="tech">
+                        <i class='bx bxl-html5' id="tech"></i>
+                        <i class='bx bxl-css3' id="tech"></i>
+                        <!-- <i class='bx bxl-javascript' id="tech"></i>
+                        <i class='bx bxl-tailwind-css' id="tech"></i>
+                        <i class='bx bxl-react' id="tech"></i> -->
+                    </div>
+                    <p>A simple yet visually captivating 3D slider, can be used in several scenarios to display cards, images, etc.</p>
 
                 </div>
             </div>
